--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -10,7 +10,8 @@
   flex-direction: row;
   border: none;
   margin-bottom: $component-margin-bottom;
-  & > img, .card-img-top, .card-img-left, .img-top, .img-left {
+  & > img, .card-img-top, .card-img-left, .img-top, .img-left,
+  .filter-ally-wrapper > img {
     width: 310px;
     height: 100%;
     flex-shrink: 0;
@@ -19,6 +20,12 @@
       width: 100%;
     }
     &.img-right, .card-img-right {
+      order: 2;
+    }
+  }
+  &.img-right {
+    & > img,
+    & > .filter-ally-wrapper {
       order: 2;
     }
   }
@@ -48,7 +55,8 @@
     &:last-child {
       margin-right: 0;
     }
-    .card-img-top, .card-img-left, .img-top, .img-left {
+    & > img,
+    & .filter-ally-wrapper > img {
       width: 100%;
       height: auto;
     }
@@ -60,49 +68,68 @@
 
 .float-box {
   display: flex;
+  align-items: flex-start;
   margin-bottom: $component-margin-bottom;
-  // blackboard ally
-  .filter-ally-wrapper {
-    flex-shrink: 0;
-    img {
-      height: auto;
+  &.img-right .filter-ally-wrapper,
+  &.img-right > img,
+  & > img.img-right,
+  &.img-right > .img-container {
+    order: 2;
+    margin-left: $component-margin-sm;
+    margin-right: 0;
+    @media only screen and (max-width: $neo-breakpoint) {
+      margin-left: 0;
     }
   }
-  .img-left, .img-right {
-    margin: 0;
-    height: 100%;
+  &.img-right .filter-ally-wrapper {
+    & > img {
+      margin: 0;
+    }
+  }
+  // blackboard ally
+  & > .filter-ally-wrapper {
     flex-shrink: 0;
-    margin-right: $component-margin-sm;
+  }
+  & > img,
+  & > .filter-ally-wrapper > img {
+    margin: 0 $component-margin-sm 0 0;
+  }
+  & > img {
+    position: relative;
+  }
+  & > .filter-ally-wrapper > img {
+    height: auto;
+    flex-shrink: 0;
     .caption {
       margin-top: $component-margin-xs;
       margin-bottom: 0;
       max-width: fit-content;
     }
   }
-  .img-right {
-    margin-left: $component-margin-sm;
-    margin-right: 0;
-    order: 2;
-  }
   &:not(.small-image) {
     @media only screen and (max-width: $neo-breakpoint) {
       display: block;
-      img-right, .img-left, {
+      & > img, & > .filter-ally-wrapper > img {
         margin-right: 0;
         margin-bottom: $component-margin-bottom-sm;
         width: 100%;
       }
-      .img-right {
-        margin-left: 0;
-      }
     }
   }  
   &.small-image {
-    img {
+    & > img,
+    & > .filter-ally-wrapper > img {
       width: 100px;
       height: 100px;
     }
   }
+  .img-container {
+    margin-right: $component-margin-sm;
+    .caption {
+      margin-top: $component-margin-xs;
+    }
+  }
+  & > div,
   .float-box-body {
     h3, h4, h5 {
       @extend .h4;
