--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,3 +1,4 @@
+
 // -----------------------------------------------------------------------------
 // home
 // -----------------------------------------------------------------------------
@@ -88,7 +89,7 @@ body {
               &.type-assessed .activityinstance a {
                 .activity-label-container .activity-label {
                   background-color: #60bbba !important;
-                  color: white;
+                  color: $white !important;
                   width: 5.5rem !important;
                 }
               }
@@ -107,13 +108,16 @@ body {
                 &:not(:last-child) {
                   margin-bottom: 0;
                 }
-                a:not(.quickeditlink) {
+                & > .inplaceeditable > :not(.quickeditlink),
+                & > .inplaceeditable > .filter-ally-wrapper > :not(.quickeditlink),
+                & > .filter-ally-wrapper > :not(.quickeditlink),
+                & > :not(.quickeditlink) {
                   display: flex;
                   max-width: 100%;
-                  img.activityicon {
+                  & > img.activityicon {
                     display: none;
                   }
-                  .instancename {
+                  & > .instancename {
                     max-width: 100vw;
                     .activity-title {
                       margin-left: 0.375rem;
@@ -122,7 +126,8 @@ body {
                       }
                     }
                   }
-                  &:hover {
+                  // don't underline restricted activities on hover
+                  &:not(.dimmed_text):hover {
                     text-decoration: none;
                     .instancename:not(.is-numbered), .instancename.is-numbered .activity-title {
                       text-decoration: underline;
@@ -210,6 +215,9 @@ body {
                 width: 100%;
                 order: 2;
                 padding: 0;
+                &.dimmed:empty {
+                  display: none !important;
+                }
               }
             }  
           }
@@ -422,6 +430,41 @@ body {
   }
   // collapsed topics only
   &.format-topcoll {
+    // quiz attempted info
+    .ct-activity-meta-container {
+      margin: 0 0 0 $component-margin-lg;
+      order: 2;
+      a {
+        display: flex;
+        align-items: center;
+        position: relative;
+        padding-left: 28px;
+        // hide original icon
+        img {
+          display: none;
+        }
+        &:hover {
+          text-decoration: underline !important;
+        }
+        &::before {
+          font-family: "Font Awesome 5 Free";
+          font-weight: 900;
+          content: '\f129';
+          position: absolute;
+          left: 0;
+          line-height: 16px;
+          color: $slate-grey;
+          border: 2px solid $slate-grey;
+          border-radius: 50%;
+          width: 20px;
+          margin-right: $component-margin-xs;
+          // img slightly out of vertical alignment
+          margin-bottom: 2px !important;
+          padding: 0px 6px;
+          font-size: 12px;
+        }
+      }
+    }
     .course-content {
       ul.ctopics {
         margin: 0 !important;
@@ -630,7 +673,7 @@ body {
               top: 0;
               .menubar {
                 margin: 0 !important;
-                background-color: white;
+                background-color: $white;
                 border-radius: 4px;
                 padding: 0.25rem;
               }
@@ -908,6 +951,12 @@ body {
               }
             }
           }
+          .ct-activity-meta-container {
+            margin-left: 100px;
+            @media only screen and (min-width: $neo-breakpoint) {
+               margin-left: 116px;
+            }
+          }
         }
         // single section page
         .single-section {
@@ -975,7 +1024,7 @@ a.activity-link {
     @extend .activity-label-container-default;
     .activity-label.assessed {
       background-color: #60bbba !important;
-      color: white;
+      color: $white;
       width: 5.5rem !important;
     }
   }
